webextensions/sidebar/styles/base.css
/* ... */
tab-item[data-group-id]:not([data-group-id="-1"]) {
  --space-xsmall: 0.267rem; /* https://searchfox.org/mozilla-central/rev/7d73613454bfe426fdceb635b33cd3061a69def4/toolkit/themes/shared/design-system/tokens-shared.css#273 */
  --space-xxsmall: calc(0.5 * var(--space-xsmall)); /* https://searchfox.org/mozilla-central/rev/7d73613454bfe426fdceb635b33cd3061a69def4/toolkit/themes/shared/design-system/tokens-shared.css#272 */
  --space-medium: calc(3 * var(--space-xsmall)); /* https://searchfox.org/mozilla-central/rev/7d73613454bfe426fdceb635b33cd3061a69def4/toolkit/themes/shared/design-system/tokens-shared.css#275 */
  --tab-group-member-indent: var(--space-medium); /* https://searchfox.org/mozilla-central/rev/7d73613454bfe426fdceb635b33cd3061a69def4/browser/themes/shared/tabbrowser/tabs.css#1016 */
  --tab-group-line-color: light-dark(var(--tab-group-color), var(--tab-group-color-invert));

  .native-tab-group-line {
    background: var(--tab-group-line-color);
    display: block;
    max-width: 2px;
    min-width: 2px;
    opacity: 1;
  }
  &.collapsed .native-tab-group-line {
    opacity: 0;
  }
  &.animation-ready .native-tab-group-line {
    transition: var(--tab-indent-positioning-animation),
                opacity var(--collapse-animation);
  }
}

.native-tab-group-line {
  :root:not(.rtl).left &,
  :root.rtl.right & {
    inset-inline-start: calc(var(--tab-group-member-indent) * 0.5);
    inset-inline-end: auto;
  }

  :root:not(.rtl).right &,
  :root.rtl.left & {
    inset-inline-start: auto;
    inset-inline-end: calc(var(--tab-group-member-indent) * 0.5);
  }
}

tab-item[type="group-collapsed-members-counter"] {
  tab-twisty,
  tab-favicon,
  tab-closebox,
  .highlighter,
  .contextual-identity-marker {
    display: none;
  }

  &,
  &:hover,
  tab-item-substance,
  tab-item-substance:hover {
    --tab-surface: transparent !important;
    --tab-border: transparent !important;
    --tab-text: light-dark(var(--tab-group-color), var(--tab-group-color-pale)) !important;
  }
}


/* non-tab items */

#tabbar-top,
#tabbar-bottom,
#tabbar ~ .after-tabs {
  height: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  overflow: visible;
  position: absolute;
  z-index: var(--over-tabs-z-index);
}

#tabbar-top {
  top: 0;
}

#tabbar-bottom {
  bottom: 0;
  justify-content: flex-end;
  top: auto;
}

.after-tabs {
  #tabbar.overflow &,
  #tabbar:not(.overflow) ~ & {
    display: none;
  }

  #tabbar ~ & {
    bottom: var(--tabbar-bottom-area-size);
    justify-content: flex-end;
  }

  .newtab-action-selector-anchor,
  .contextual-identities-selector-anchor {
    background: none;
    bottom: 0;
    color: var(--tab-text);
    display: none;
    max-width: var(--new-tab-button-anchor-size);
    opacity: 0;
    overflow: hidden;
    padding-block: calc((var(--new-tab-button-anchor-size) - var(--svg-small-icon-size)) / 2);
    padding-inline: calc((var(--new-tab-button-anchor-size) - var(--svg-small-icon-size)) / 2);
    pointer-events: none;
    position: absolute;
    top: 0;
    transition: opacity var(--collapse-animation);
    z-index: var(--over-buttons-z-index);
  }
}


.newtab-button-box {
  position: relative;
}

.newtab-button {
  background: none transparent;
  margin-block: 0;
  margin-inline: 0;
  text-align: center;

  &::after {
    -moz-context-properties: fill;
    background: url("./icons/new-16.svg") no-repeat center / 100%;
    content: "";
    display: inline-block;
    fill: var(--tab-text);
    height: var(--svg-small-icon-size);
    opacity: var(--button-opacity);
    width: var(--svg-small-icon-size);
  }
  :root.simulate-svg-context-fill &::after {
    background: var(--tab-text);
    mask: url("./icons/new-16.svg") no-repeat center / 100%;
  }

  &:hover::before {
    opacity: var(--button-hover-opacity);
  }
}


:root.newtab-action-selectable
  .after-tabs
  .newtab-button-box:hover
  .newtab-action-selector-anchor,
.after-tabs
  .newtab-action-selector-anchor.open,
:root.contextual-identity-selectable:not(.incognito)
  .after-tabs
  .newtab-button-box:hover
  .contextual-identities-selector-anchor:not([disabled="true"]),
.after-tabs
  .contextual-identities-selector-anchor.open {
  pointer-events: auto;
  opacity: 1;
}

:root.contextual-identity-selectable
  .after-tabs
  .newtab-action-selector-anchor {
  border-width: 0;
  border-inline-end-width: 1px;
  display: flex;
  inset-inline-start: 0;
}

:root:not(.contextual-identity-selectable)
  .after-tabs
  .newtab-action-selector-anchor,
:root.contextual-identity-selectable
  .after-tabs
  .contextual-identities-selector-anchor {
  border-width: 0;
  border-inline-start-width: 1px;
  display: flex;
  inset-inline-end: 0;
}

.newtab-action-selector-anchor::-moz-focus-inner,
.contextual-identities-selector-anchor::-moz-focus-inner {
  border: none;
}

#subpanel-toggler::before {
  content: "▼";
  font-size: 0.65em;
  margin-block: 0.125em;
  margin-inline: 0.125em;
}

.newtab-action-selector-anchor::after,
.contextual-identities-selector-anchor::after,
#subpanel-selector-anchor::after {
  -moz-context-properties: fill;
  background: url("./icons/ArrowheadDown.svg") no-repeat center / 60%;
  content: "";
  display: inline-block;
  fill: var(--tab-text);
  height: var(--svg-small-icon-size);
  line-height: 1;
  margin-block-start: calc((var(--favicon-size) - var(--svg-small-icon-size)) / 2);
  max-height: var(--favicon-size);
  max-width: var(--favicon-size);
  width: var(--svg-small-icon-size);
}
:root.simulate-svg-context-fill .newtab-action-selector-anchor::after,
:root.simulate-svg-context-fill .contextual-identities-selector-anchor::after,
:root.simulate-svg-context-fill #subpanel-selector-anchor::after {
  background: var(--tab-text);
  mask: url("./icons/ArrowheadDown.svg") no-repeat center / 60%;
}
/* ... */

